attempting to fix css not showing at deployment

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,38 +1,39 @@
 main {
-    text-align: center;
-    position: relative;
+  text-align: center;
+  position: relative;
 }
 
 #currentTime {
-    position: absolute;
-    top: 5px;
-    right: 10px;
+  position: absolute;
+  top: 5px;
+  right: 10px;
 }
 
 div a {
-    color:purple;
-    text-decoration: none;
-    cursor: pointer;
+  color: purple;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 h1 {
-    margin-top: 200px;
-    font-style: bold;
-    text-align: center;}
+  margin-top: 200px;
+  font-style: bold;
+  text-align: center;
+}
 
 h2 {
-    font-size: 20px;
-    word-wrap: normal;
-    text-align: center;
-    margin-left: 30%;
-    margin-right: 30%;
+  font-size: 20px;
+  word-wrap: normal;
+  text-align: center;
+  margin-left: 30%;
+  margin-right: 30%;
 }
 
 #startBtn {
-    cursor: pointer;
-    background-color: purple;
-    color: white;
-    border-radius: 4px;
-    display: block;
-    margin: auto;
+  cursor: pointer;
+  background-color: purple;
+  color: white;
+  border-radius: 4px;
+  display: block;
+  margin: auto;
 }
